# Flask-JSGlue

./: pyproject.toml  setup.py
src/flask_jsglue/: __init__.py
templates/jsglue/: js_bridge.js
