[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-JSGlue"
description = "Flask-JSGlue helps hook up your Flask application nicely with the front end."
license = {text = "BSD"}
maintainers = [{name = "Stewart Park", email = "stewartpark92@gmail.com"}]
authors = [{name = "Stewart Park", email = "stewartpark92@gmail.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = [
    "Flask"
]
version = "0.3.2"

[project.urls]
"Source Code" = "https://stewartpark.github.com/Flask-JSGlue"

[tool.setuptools]
"zip-safe" = false

[tool.setuptools.package-data]
"*" = ["*.js"]

